@@ -252,7 +252,8 @@ $LANG = array(
 'L_MEDIAS_DOCUMENTS'										=> 'Documenti',
 'L_MEDIAS_CREATE_FOLDER'									=> 'Crea una cartella',
 'L_MEDIAS_SUBMIT_FILE'										=> 'Invia',
-'L_MEDIAS_MAX_UPOLAD_FILE'									=> 'Dimensione massima dei file',
+'L_MEDIAS_MAX_UPLOAD_FILE'									=> 'Dimensione massima dei file',
+'L_MEDIAS_MAX_UPLOAD_NBFILE'						        => 'Numero massimo di file per upload',
 'L_MEDIAS_MAX_POST_SIZE'									=> 'Dimensione massima dei dati',
 'L_MEDIAS_DIRECTORY'										=> 'Posizione',
 'L_MEDIAS_FOLDER'											=> 'File',
