@@ -252,7 +252,8 @@ $LANG = array(
 'L_MEDIAS_DOCUMENTS'										=> 'Documenten',
 'L_MEDIAS_CREATE_FOLDER'									=> 'Map aanmaken',
 'L_MEDIAS_SUBMIT_FILE'										=> 'Versturen',
-'L_MEDIAS_MAX_UPOLAD_FILE'									=> 'Maximale grootte bestand',
+'L_MEDIAS_MAX_UPLOAD_FILE'									=> 'Maximale grootte bestand',
+'L_MEDIAS_MAX_UPLOAD_NBFILE'					        	=> 'Max aantal bestanden per upload',
 'L_MEDIAS_MAX_POST_SIZE'									=> 'Maximale gegevensgrootte',
 'L_MEDIAS_DIRECTORY'										=> 'Locatie',
 'L_MEDIAS_FOLDER'											=> 'Bestand',
