@@ -299,7 +299,8 @@ $LANG = array(
 'L_MEDIAS_TITLE'					=> 'Zarządzanie mediami',
 'L_MEDIAS_DIRECTORY' 				=> 'lokalizacja',
 'L_MEDIAS_BACK'						=> 'Powrót do mediów',
-'L_MEDIAS_MAX_UPOLAD_FILE'			=> 'Maksymalny rozmiar pliku',
+'L_MEDIAS_MAX_UPLOAD_FILE'			=> 'Maksymalny rozmiar pliku',
+'L_MEDIAS_MAX_UPLOAD_NBFILE'		=> 'Maksymalna liczba plików na przesyłanie',
 'L_MEDIAS_MAX_POST_SIZE'			=> 'Maksymalny rozmiar danych',
 'L_MEDIAS_SUBMIT_FILE'				=> 'Wysłać',
 'L_MEDIAS_IMAGES'					=> 'Obrazowość',
